--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ input:focus, textarea:focus, button:focus {
 }
 
 .documentation {
-  padding: 200px 0 60px 0;
+  padding: 150px 0 60px 0;
 }
 .documentation h2, .documentation h3, .documentation h4 {
   margin-bottom: 24px;
@@ -277,4 +277,67 @@ input:focus, textarea:focus, button:focus {
   box-shadow: 0px 0px 0px 5px #D8E5FF;
   border-radius: 50%;
   margin-bottom: 0;
+}
+
+.navbar {
+  padding: 30px 0 0 0;
+  display: flex;
+}
+.navbar .container {
+  width: 100%;
+  display: flex;
+  box-sizing: border-box;
+}
+.navbar__list {
+  display: flex;
+  align-items: center;
+  margin: 0 auto;
+}
+.navbar__list-link {
+  padding: 12px 18px;
+  display: flex;
+  border-radius: 10px;
+  background-color: #E7EBFD;
+  transition: 0.2s ease;
+}
+.navbar__list-link span {
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 143%;
+  color: #344054;
+}
+.navbar__list-link:hover {
+  box-shadow: 5px 5px 0px 0px #0E29BB;
+  background-color: #D0D6FB;
+}
+.navbar__list-link:hover span {
+  color: black;
+}
+.navbar__list-back {
+  display: flex;
+  align-items: center;
+}
+.navbar__list-back svg {
+  width: 20px;
+  height: 20px;
+  padding: 5px;
+  margin-right: 10px;
+  border-radius: 50%;
+  fill: transparent;
+  stroke: #344054;
+  transition: 0.2s ease;
+  background-color: #E7EBFD;
+}
+.navbar__list-back span {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 143%;
+  color: #344054;
+}
+.navbar__list-back:hover svg {
+  stroke: black;
+  background-color: #D0D6FB;
+}
+.navbar__list-back:hover span {
+  color: black;
 }
