[update] add template of MyToast messages declaration

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -148,7 +148,7 @@ input:focus, textarea:focus, button:focus {
   justify-content: space-between;
   padding: 35px 50px 45px;
   border-radius: 20px;
-  background: linear-gradient(91.56deg, #141B46 0%, #041887 100%);
+  background: linear-gradient(-45deg, #041887, #141B46);
 }
 .header__wrapper-logo {
   display: flex;
